# connate

./: ARCHITECTURE.md  Cargo.toml  README.md  TODO.md  check_panic.sh
.cargo/: config.toml
gentoo/: README.md  connate-9999.ebuild  service-manager-2.ebuild
src/: constants.rs  err.rs  internal.rs  internal_api.rs  lib.rs  types.rs
src/conctl/: main.rs
src/conctl/cmd/: dependency_query.rs  general_query.rs  miscellaneous.rs  mod.rs  ready.rs  set_target.rs  settle.rs
src/config/: config.rs  config_api.rs  example-init-config.rs  example-user-config.rs  helpers.rs  mod.rs
src/connate/: handle_request.rs  handle_signal.rs  main.rs  next_state.rs  poll.rs  session.rs  setup.rs  spawn.rs
src/ipc/: ipc_client.rs  ipc_server.rs  mod.rs  request.rs  response.rs
src/libc_shim/: bcmp.rs  memcpy.rs  mod.rs  panic.rs  startup.rs  strlen.rs
src/os/: argv.rs  block_signals.rs  chdir.rs  clone.rs  clone3.rs  envp.rs  exec.rs  exit.rs  fd.rs  fork.rs  getpid.rs  getppid.rs  kill.rs  mkdir.rs  mod.rs  mount.rs  print.rs  readlink.rs  reboot.rs  set_child_subreaper.rs  set_no_new_privs.rs  set_process_name.rs  setsid.rs  setuid.rs  signalfd.rs  sleep.rs  stat.rs  sync.rs  time.rs  umount.rs  vfork.rs  waitid.rs  waitpid.rs
src/syscall/: chdir.rs  clock_gettime.rs  clone.rs  clone3.rs  close.rs  dup.rs  exec.rs  exit.rs  fcntl.rs  fork.rs  fstatat.rs  ftruncate.rs  getdents.rs  getpid.rs  getppid.rs  ioctl.rs  kill.rs  lseek.rs  memfd.rs  mkdir.rs  mod.rs  mount.rs  nanosleep.rs  open.rs  pipe.rs  poll.rs  prctl.rs  read.rs  readlink.rs  reboot.rs  setsid.rs  setuid.rs  signalfd.rs  sigprocmask.rs  sync.rs  umount.rs  vfork.rs  waitid.rs  waitpid.rs  write.rs
src/util/: buf_writer.rs  mem.rs  mod.rs
